# Cloud-Telemetry-Backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  admin.py  app.py  audit.py  challenges.py  config.py  database.py  docker-compose.yml  frontend.py  geoip.py  identifier_mask.py  ingress.py  models.py  persistence.py  protocol.py  pyproject.toml  requirements.txt  scanner.py  settings.py
static/: telemetry.css  telemetry.js
tests/: conftest.py  test_admin_endpoints.py  test_frontend_assets.py  test_ingress_flow.py  test_scanner_and_geoip.py
