[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-telemetry-backend"
version = "0.1.0"
description = "Standalone ingestion backend for Neo-MoFox cloud telemetry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.35.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "geoip2>=4.8.0",
]

[project.scripts]
cloud-telemetry-backend = "cloud_telemetry_backend.__main__:main"

[tool.setuptools]
packages = ["cloud_telemetry_backend"]

[tool.setuptools.package-dir]
cloud_telemetry_backend = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]